--- a/cook_inlet_catalogs/catalogs/ctd_transects_cmi_uaf.yaml
+++ b/cook_inlet_catalogs/catalogs/ctd_transects_cmi_uaf.yaml
@@ -10,14 +10,63 @@ aliases:
   Cruise-09: Cruise-09
   Cruise-10: Cruise-10
 data:
-  9670f1665406a366:
+  402d147a7e19766c:
     datatype: intake.readers.datatypes:CSV
     kwargs:
       storage_options: null
-      url: https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
+      url: simplecache://::https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
     metadata: {}
     user_parameters: {}
 entries:
+  088aad9b9cfffa5c:
+    kwargs:
+      out_instances:
+      - pandas:DataFrame
+      - pandas:DataFrame
+      steps:
+      - - '{data(659a2126394d6848)}'
+        - []
+        - {}
+      - - '{func(intake.readers.convert:GenericFunc)}'
+        - []
+        - func: '{func(cook_inlet_catalogs.utils:parse_year_month_day_hour_minute)}'
+    metadata: {}
+    output_instance: pandas:DataFrame
+    reader: intake.readers.convert:Pipeline
+    user_parameters: {}
+  659a2126394d6848:
+    kwargs:
+      args:
+      - '{data(402d147a7e19766c)}'
+      dtype:
+        Day: str
+        Hour: str
+        Minute: str
+        Month: str
+        Year: str
+      sep: "\t"
+      storage_options:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
+      usecols:
+      - Cruise
+      - Station
+      - Month
+      - Day
+      - Year
+      - Hour
+      - Minute
+      - Longitude
+      - Latitude
+      - Depth [m]
+      - Temperature
+      - Salinity
+      - flag
+    metadata: {}
+    output_instance: pandas:DataFrame
+    reader: intake.readers.readers:PandasCSV
+    user_parameters: {}
   Cruise-01:
     kwargs:
       out_instances:
@@ -27,12 +76,12 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(f22cf3f5e24d7150)}'
+      - - '{data(659a2126394d6848)}'
         - []
         - {}
       - - '{func(intake.readers.transform:Method)}'
         - []
-        - datetime: '{data(ca6d59bf41aa0f71)}'
+        - datetime: '{data(088aad9b9cfffa5c)}'
           method_name: assign
       - - '{func(intake.readers.transform:Method)}'
         - []
@@ -72,13 +121,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2004-05-21'
@@ -92,20 +141,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2004-05-21'
           width: 500
           x: distance [km]
           y: Depth [m]
-      urlpath: https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
+      urlpath: simplecache://::https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -118,12 +167,12 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(f22cf3f5e24d7150)}'
+      - - '{data(659a2126394d6848)}'
         - []
         - {}
       - - '{func(intake.readers.transform:Method)}'
         - []
-        - datetime: '{data(ca6d59bf41aa0f71)}'
+        - datetime: '{data(088aad9b9cfffa5c)}'
           method_name: assign
       - - '{func(intake.readers.transform:Method)}'
         - []
@@ -163,13 +212,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2004-06-24'
@@ -183,20 +232,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2004-06-24'
           width: 500
           x: distance [km]
           y: Depth [m]
-      urlpath: https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
+      urlpath: simplecache://::https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -209,12 +258,12 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(f22cf3f5e24d7150)}'
+      - - '{data(659a2126394d6848)}'
         - []
         - {}
       - - '{func(intake.readers.transform:Method)}'
         - []
-        - datetime: '{data(ca6d59bf41aa0f71)}'
+        - datetime: '{data(088aad9b9cfffa5c)}'
           method_name: assign
       - - '{func(intake.readers.transform:Method)}'
         - []
@@ -254,13 +303,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2004-08-08'
@@ -274,20 +323,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2004-08-08'
           width: 500
           x: distance [km]
           y: Depth [m]
-      urlpath: https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
+      urlpath: simplecache://::https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -300,12 +349,12 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(f22cf3f5e24d7150)}'
+      - - '{data(659a2126394d6848)}'
         - []
         - {}
       - - '{func(intake.readers.transform:Method)}'
         - []
-        - datetime: '{data(ca6d59bf41aa0f71)}'
+        - datetime: '{data(088aad9b9cfffa5c)}'
           method_name: assign
       - - '{func(intake.readers.transform:Method)}'
         - []
@@ -345,13 +394,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2004-09-17'
@@ -365,20 +414,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2004-09-17'
           width: 500
           x: distance [km]
           y: Depth [m]
-      urlpath: https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
+      urlpath: simplecache://::https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -391,12 +440,12 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(f22cf3f5e24d7150)}'
+      - - '{data(659a2126394d6848)}'
         - []
         - {}
       - - '{func(intake.readers.transform:Method)}'
         - []
-        - datetime: '{data(ca6d59bf41aa0f71)}'
+        - datetime: '{data(088aad9b9cfffa5c)}'
           method_name: assign
       - - '{func(intake.readers.transform:Method)}'
         - []
@@ -436,13 +485,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2004-10-09'
@@ -456,20 +505,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2004-10-09'
           width: 500
           x: distance [km]
           y: Depth [m]
-      urlpath: https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
+      urlpath: simplecache://::https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -482,12 +531,12 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(f22cf3f5e24d7150)}'
+      - - '{data(659a2126394d6848)}'
         - []
         - {}
       - - '{func(intake.readers.transform:Method)}'
         - []
-        - datetime: '{data(ca6d59bf41aa0f71)}'
+        - datetime: '{data(088aad9b9cfffa5c)}'
           method_name: assign
       - - '{func(intake.readers.transform:Method)}'
         - []
@@ -527,13 +576,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2005-03-30'
@@ -547,20 +596,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2005-03-30'
           width: 500
           x: distance [km]
           y: Depth [m]
-      urlpath: https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
+      urlpath: simplecache://::https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -573,12 +622,12 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(f22cf3f5e24d7150)}'
+      - - '{data(659a2126394d6848)}'
         - []
         - {}
       - - '{func(intake.readers.transform:Method)}'
         - []
-        - datetime: '{data(ca6d59bf41aa0f71)}'
+        - datetime: '{data(088aad9b9cfffa5c)}'
           method_name: assign
       - - '{func(intake.readers.transform:Method)}'
         - []
@@ -618,13 +667,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2005-05-02'
@@ -638,20 +687,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2005-05-02'
           width: 500
           x: distance [km]
           y: Depth [m]
-      urlpath: https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
+      urlpath: simplecache://::https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -664,12 +713,12 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(f22cf3f5e24d7150)}'
+      - - '{data(659a2126394d6848)}'
         - []
         - {}
       - - '{func(intake.readers.transform:Method)}'
         - []
-        - datetime: '{data(ca6d59bf41aa0f71)}'
+        - datetime: '{data(088aad9b9cfffa5c)}'
           method_name: assign
       - - '{func(intake.readers.transform:Method)}'
         - []
@@ -709,13 +758,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2005-06-01'
@@ -729,20 +778,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2005-06-01'
           width: 500
           x: distance [km]
           y: Depth [m]
-      urlpath: https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
+      urlpath: simplecache://::https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -755,12 +804,12 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(f22cf3f5e24d7150)}'
+      - - '{data(659a2126394d6848)}'
         - []
         - {}
       - - '{func(intake.readers.transform:Method)}'
         - []
-        - datetime: '{data(ca6d59bf41aa0f71)}'
+        - datetime: '{data(088aad9b9cfffa5c)}'
           method_name: assign
       - - '{func(intake.readers.transform:Method)}'
         - []
@@ -800,13 +849,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2005-08-26'
@@ -820,20 +869,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2005-08-26'
           width: 500
           x: distance [km]
           y: Depth [m]
-      urlpath: https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
+      urlpath: simplecache://::https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -846,12 +895,12 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(f22cf3f5e24d7150)}'
+      - - '{data(659a2126394d6848)}'
         - []
         - {}
       - - '{func(intake.readers.transform:Method)}'
         - []
-        - datetime: '{data(ca6d59bf41aa0f71)}'
+        - datetime: '{data(088aad9b9cfffa5c)}'
           method_name: assign
       - - '{func(intake.readers.transform:Method)}'
         - []
@@ -891,13 +940,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2005-10-03'
@@ -911,67 +960,22 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Depth [m]
-          - Longitude
-          - Latitude
           - Station
+          - Longitude
           - datetime
           - Temperature
+          - Depth [m]
+          - distance [km]
+          - Latitude
           kind: scatter
           shared_axes: false
           title: '2005-10-03'
           width: 500
           x: distance [km]
           y: Depth [m]
-      urlpath: https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
+      urlpath: simplecache://::https://researchworkspace.com/files/39886038/all_forelands_ctd.txt
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
-    user_parameters: {}
-  ca6d59bf41aa0f71:
-    kwargs:
-      out_instances:
-      - pandas:DataFrame
-      - pandas:DataFrame
-      steps:
-      - - '{data(f22cf3f5e24d7150)}'
-        - []
-        - {}
-      - - '{func(intake.readers.convert:GenericFunc)}'
-        - []
-        - func: '{func(cook_inlet_catalogs.utils:parse_year_month_day_hour_minute)}'
-    metadata: {}
-    output_instance: pandas:DataFrame
-    reader: intake.readers.convert:Pipeline
-    user_parameters: {}
-  f22cf3f5e24d7150:
-    kwargs:
-      args:
-      - '{data(9670f1665406a366)}'
-      dtype:
-        Day: str
-        Hour: str
-        Minute: str
-        Month: str
-        Year: str
-      sep: "\t"
-      usecols:
-      - Cruise
-      - Station
-      - Month
-      - Day
-      - Year
-      - Hour
-      - Minute
-      - Longitude
-      - Latitude
-      - Depth [m]
-      - Temperature
-      - Salinity
-      - flag
-    metadata: {}
-    output_instance: pandas:DataFrame
-    reader: intake.readers.readers:PandasCSV
     user_parameters: {}
 metadata:
   featuretype: trajectoryProfile
