--- a/cook_inlet_catalogs/catalogs/moorings_kbnerr_bear_cove_seldovia.yaml
+++ b/cook_inlet_catalogs/catalogs/moorings_kbnerr_bear_cove_seldovia.yaml
@@ -49,13 +49,13 @@ data:
         data:
           height: 300
           hover_cols:
-          - time
-          - latitude
-          - longitude
-          - station
           - sea_water_practical_salinity
           - z
+          - time
+          - longitude
+          - station
           - sea_water_temperature
+          - latitude
           kind: line
           legend: top
           shared_axes: false
@@ -113,7 +113,7 @@ data:
       maptype: point
       maxLatitude: 59.44099
       maxLongitude: -151.72096
-      maxTime: '2024-07-24T13:45:00Z'
+      maxTime: '2024-08-15T19:45:00Z'
       minLatitude: 59.44099
       minLongitude: -151.72096
       minTime: '2004-01-01T09:00:00Z'
@@ -121,14 +121,14 @@ data:
         data:
           height: 300
           hover_cols:
-          - time
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
-          - latitude
-          - longitude
-          - station
           - sea_water_practical_salinity
           - z
+          - sea_surface_height_above_sea_level_geoid_local_station_datum
+          - time
+          - longitude
+          - station
           - sea_water_temperature
+          - latitude
           kind: line
           legend: top
           shared_axes: false
@@ -188,7 +188,7 @@ data:
       maptype: point
       maxLatitude: 59.44099
       maxLongitude: -151.72096
-      maxTime: '2024-05-29T19:00:00Z'
+      maxTime: '2024-08-01T18:00:00Z'
       minLatitude: 59.44099
       minLongitude: -151.72096
       minTime: '2004-01-01T09:00:00Z'
@@ -196,14 +196,14 @@ data:
         data:
           height: 300
           hover_cols:
-          - time
-          - sea_surface_height_above_sea_level_geoid_local_station_datum
-          - latitude
-          - longitude
-          - station
           - sea_water_practical_salinity
           - z
+          - sea_surface_height_above_sea_level_geoid_local_station_datum
+          - time
+          - longitude
+          - station
           - sea_water_temperature
+          - latitude
           kind: line
           legend: top
           shared_axes: false
@@ -230,11 +230,14 @@ metadata:
   header_names: null
   included: true
   key_variables:
-  - salt
-  - ssh
   - temp
+  - ssh
+  - salt
   map:
     c: station
+    clabel: ''
+    clim: null
+    cmap: null
     coastline: false
     color: k
     geo: true
@@ -269,7 +272,7 @@ metadata:
   maptype: point
   maxLatitude: 59.7262
   maxLongitude: -151.04865
-  maxTime: '2024-07-24T13:45:00Z'
+  maxTime: '2024-08-15T19:45:00Z'
   minLatitude: 59.44099
   minLongitude: -151.72096
   minTime: '2004-01-01T09:00:00Z'
