--- a/cook_inlet_catalogs/catalogs/ctd_transects_barabara_to_bluff_2002_2003.yaml
+++ b/cook_inlet_catalogs/catalogs/ctd_transects_barabara_to_bluff_2002_2003.yaml
@@ -11,14 +11,28 @@ aliases:
   Cruise 8: Cruise 8
   Cruise 9: Cruise 9
 data:
-  7cec9a7bfdd2fa74:
+  1ee5461a39ae5e7a:
     datatype: intake.readers.datatypes:CSV
     kwargs:
       storage_options: null
-      url: https://researchworkspace.com/files/42396691/barabara.csv
+      url: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
     metadata: {}
     user_parameters: {}
 entries:
+  5ff4f93fb6f993f0:
+    kwargs:
+      args:
+      - '{data(1ee5461a39ae5e7a)}'
+      parse_dates:
+      - date_time
+      storage_options:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
+    metadata: {}
+    output_instance: pandas:DataFrame
+    reader: intake.readers.readers:PandasCSV
+    user_parameters: {}
   Cruise 1:
     kwargs:
       out_instances:
@@ -26,7 +40,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(c9dbefd12ed0f225)}'
+      - - '{data(5ff4f93fb6f993f0)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -58,13 +72,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 1: 2002-07-23 08:28:00'
@@ -78,20 +92,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 1: 2002-07-23 08:28:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -102,7 +116,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(c9dbefd12ed0f225)}'
+      - - '{data(5ff4f93fb6f993f0)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -134,13 +148,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 10: 2003-05-19 13:17:00'
@@ -154,20 +168,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 10: 2003-05-19 13:17:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -178,7 +192,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(c9dbefd12ed0f225)}'
+      - - '{data(5ff4f93fb6f993f0)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -210,13 +224,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 11: 2003-06-21 11:20:00'
@@ -230,20 +244,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 11: 2003-06-21 11:20:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -254,7 +268,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(c9dbefd12ed0f225)}'
+      - - '{data(5ff4f93fb6f993f0)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -286,13 +300,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 2: 2002-09-07 11:05:00'
@@ -306,20 +320,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 2: 2002-09-07 11:05:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -330,7 +344,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(c9dbefd12ed0f225)}'
+      - - '{data(5ff4f93fb6f993f0)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -362,13 +376,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 3: 2002-09-25 11:55:00'
@@ -382,20 +396,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 3: 2002-09-25 11:55:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -406,7 +420,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(c9dbefd12ed0f225)}'
+      - - '{data(5ff4f93fb6f993f0)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -438,13 +452,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 4: 2002-11-11 14:45:00'
@@ -458,20 +472,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 4: 2002-11-11 14:45:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -482,7 +496,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(c9dbefd12ed0f225)}'
+      - - '{data(5ff4f93fb6f993f0)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -514,13 +528,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 5: 2002-12-11 16:39:00'
@@ -534,20 +548,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 5: 2002-12-11 16:39:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -558,7 +572,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(c9dbefd12ed0f225)}'
+      - - '{data(5ff4f93fb6f993f0)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -590,13 +604,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 6: 2003-01-31 15:56:00'
@@ -610,20 +624,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 6: 2003-01-31 15:56:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -634,7 +648,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(c9dbefd12ed0f225)}'
+      - - '{data(5ff4f93fb6f993f0)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -666,13 +680,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 7: 2003-02-18 16:50:00'
@@ -686,20 +700,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 7: 2003-02-18 16:50:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -710,7 +724,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(c9dbefd12ed0f225)}'
+      - - '{data(5ff4f93fb6f993f0)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -742,13 +756,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 8: 2003-03-31 15:27:00'
@@ -762,20 +776,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 8: 2003-03-31 15:27:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -786,7 +800,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(c9dbefd12ed0f225)}'
+      - - '{data(5ff4f93fb6f993f0)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -818,13 +832,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 9: 2003-04-17 12:35:00'
@@ -838,32 +852,22 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
           - date_time
-          - Temperature (C)
           - Station
-          - Lat (N)
+          - Temperature (C)
           - Long (E)
+          - distance [km]
           - Depth (m)
+          - Lat (N)
           kind: scatter
           shared_axes: false
           title: 'Cruise 9: 2003-04-17 12:35:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
-    user_parameters: {}
-  c9dbefd12ed0f225:
-    kwargs:
-      args:
-      - '{data(7cec9a7bfdd2fa74)}'
-      parse_dates:
-      - date_time
-    metadata: {}
-    output_instance: pandas:DataFrame
-    reader: intake.readers.readers:PandasCSV
     user_parameters: {}
 metadata:
   featuretype: trajectoryProfile
