--- a/cook_inlet_catalogs/catalogs/moorings_circac.yaml
+++ b/cook_inlet_catalogs/catalogs/moorings_circac.yaml
@@ -1,21 +1,25 @@
 aliases:
   moorings_circac: moorings_circac
 data:
-  6fdf708d07d07c85:
+  1d9375d48baa99d3:
     datatype: intake.readers.datatypes:CSV
     kwargs:
       storage_options: null
-      url: https://researchworkspace.com/files/39886029/xto_mooring_2006.txt
+      url: simplecache://::https://researchworkspace.com/files/39886029/xto_mooring_2006.txt
     metadata: {}
     user_parameters: {}
 entries:
-  82efd85910d0defb:
+  d4a4bece2c29b5e3:
     kwargs:
       args:
-      - '{data(6fdf708d07d07c85)}'
+      - '{data(1d9375d48baa99d3)}'
       parse_dates:
       - Date UTC
       sep: "\t"
+      storage_options:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
     metadata: {}
     output_instance: pandas:DataFrame
     reader: intake.readers.readers:PandasCSV
@@ -27,7 +31,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(82efd85910d0defb)}'
+      - - '{data(d4a4bece2c29b5e3)}'
         - []
         - {}
       - - '{func(intake.readers.transform:Method)}'
@@ -54,11 +58,11 @@ entries:
         data:
           height: 300
           hover_cols:
-          - latitude_deg
-          - longitude_deg
           - Depth
-          - Temperature
+          - longitude_deg
           - Date UTC
+          - Temperature
+          - latitude_deg
           kind: line
           legend: top
           shared_axes: false
@@ -69,7 +73,7 @@ entries:
           y:
           - Temperature
           - Salinity
-      urlpath: https://researchworkspace.com/files/39886029/xto_mooring_2006.txt
+      urlpath: simplecache://::https://researchworkspace.com/files/39886029/xto_mooring_2006.txt
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
