--- a/cook_inlet_catalogs/catalogs/moorings_kbnerr_historical.yaml
+++ b/cook_inlet_catalogs/catalogs/moorings_kbnerr_historical.yaml
@@ -5,48 +5,52 @@ aliases:
   kacpgwq: kacpgwq
   kacsewq: kacsewq
 data:
-  21fa4ad5b4fc9d7c:
+  31dd5e665c208dd4:
     datatype: intake.readers.datatypes:CSV
     kwargs:
       storage_options: null
-      url: https://researchworkspace.com/files/42202447/kacpgwq_subsetted.csv
+      url: simplecache://::https://researchworkspace.com/files/42202445/kachowq_subsetted.csv
     metadata: {}
     user_parameters: {}
-  43bada303046378a:
+  49e059a73688d1d0:
     datatype: intake.readers.datatypes:CSV
     kwargs:
       storage_options: null
-      url: https://researchworkspace.com/files/42202449/kacsewq_subsetted.csv
+      url: simplecache://::https://researchworkspace.com/files/42202443/kacdlwq_subsetted.csv
     metadata: {}
     user_parameters: {}
-  8ec3277123113f09:
+  5e8720b8f6aeb5b1:
     datatype: intake.readers.datatypes:CSV
     kwargs:
       storage_options: null
-      url: https://researchworkspace.com/files/42202441/kacbcwq_subsetted.csv
+      url: simplecache://::https://researchworkspace.com/files/42202447/kacpgwq_subsetted.csv
     metadata: {}
     user_parameters: {}
-  babedc665c69c55a:
+  9725a44452263081:
     datatype: intake.readers.datatypes:CSV
     kwargs:
       storage_options: null
-      url: https://researchworkspace.com/files/42202443/kacdlwq_subsetted.csv
+      url: simplecache://::https://researchworkspace.com/files/42202441/kacbcwq_subsetted.csv
     metadata: {}
     user_parameters: {}
-  e10c8e3d6094ca99:
+  deb3040853a23444:
     datatype: intake.readers.datatypes:CSV
     kwargs:
       storage_options: null
-      url: https://researchworkspace.com/files/42202445/kachowq_subsetted.csv
+      url: simplecache://::https://researchworkspace.com/files/42202449/kacsewq_subsetted.csv
     metadata: {}
     user_parameters: {}
 entries:
   kacbcwq:
     kwargs:
       args:
-      - '{data(8ec3277123113f09)}'
+      - '{data(9725a44452263081)}'
       parse_dates:
       - 0
+      storage_options:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
     metadata:
       featuretype: timeSeries
       key_variables:
@@ -63,11 +67,11 @@ entries:
         data:
           height: 300
           hover_cols:
+          - Temp
+          - Depth
           - DateTimeStamp
           - lon
           - lat
-          - Temp
-          - Depth
           kind: line
           legend: top
           shared_axes: false
@@ -78,16 +82,20 @@ entries:
           y:
           - Temp
           - Sal
-      urlpath: https://researchworkspace.com/files/42202441/kacbcwq_subsetted.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42202441/kacbcwq_subsetted.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.readers:PandasCSV
     user_parameters: {}
   kacdlwq:
     kwargs:
       args:
-      - '{data(babedc665c69c55a)}'
+      - '{data(49e059a73688d1d0)}'
       parse_dates:
       - 0
+      storage_options:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
     metadata:
       featuretype: timeSeries
       key_variables:
@@ -104,11 +112,11 @@ entries:
         data:
           height: 300
           hover_cols:
+          - Temp
+          - Depth
           - DateTimeStamp
           - lon
           - lat
-          - Temp
-          - Depth
           kind: line
           legend: top
           shared_axes: false
@@ -119,16 +127,20 @@ entries:
           y:
           - Temp
           - Sal
-      urlpath: https://researchworkspace.com/files/42202443/kacdlwq_subsetted.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42202443/kacdlwq_subsetted.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.readers:PandasCSV
     user_parameters: {}
   kachowq:
     kwargs:
       args:
-      - '{data(e10c8e3d6094ca99)}'
+      - '{data(31dd5e665c208dd4)}'
       parse_dates:
       - 0
+      storage_options:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
     metadata:
       featuretype: timeSeries
       key_variables:
@@ -145,11 +157,11 @@ entries:
         data:
           height: 300
           hover_cols:
+          - Temp
+          - Depth
           - DateTimeStamp
           - lon
           - lat
-          - Temp
-          - Depth
           kind: line
           legend: top
           shared_axes: false
@@ -160,16 +172,20 @@ entries:
           y:
           - Temp
           - Sal
-      urlpath: https://researchworkspace.com/files/42202445/kachowq_subsetted.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42202445/kachowq_subsetted.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.readers:PandasCSV
     user_parameters: {}
   kacpgwq:
     kwargs:
       args:
-      - '{data(21fa4ad5b4fc9d7c)}'
+      - '{data(5e8720b8f6aeb5b1)}'
       parse_dates:
       - 0
+      storage_options:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
     metadata:
       featuretype: timeSeries
       key_variables:
@@ -186,11 +202,11 @@ entries:
         data:
           height: 300
           hover_cols:
+          - Temp
+          - Depth
           - DateTimeStamp
           - lon
           - lat
-          - Temp
-          - Depth
           kind: line
           legend: top
           shared_axes: false
@@ -201,16 +217,20 @@ entries:
           y:
           - Temp
           - Sal
-      urlpath: https://researchworkspace.com/files/42202447/kacpgwq_subsetted.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42202447/kacpgwq_subsetted.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.readers:PandasCSV
     user_parameters: {}
   kacsewq:
     kwargs:
       args:
-      - '{data(43bada303046378a)}'
+      - '{data(deb3040853a23444)}'
       parse_dates:
       - 0
+      storage_options:
+        simplecache:
+          cache_storage: /home/kristen/.cache/cook-inlet-catalogs
+          same_names: true
     metadata:
       featuretype: timeSeries
       key_variables:
@@ -227,11 +247,11 @@ entries:
         data:
           height: 300
           hover_cols:
+          - Temp
+          - Depth
           - DateTimeStamp
           - lon
           - lat
-          - Temp
-          - Depth
           kind: line
           legend: top
           shared_axes: false
@@ -242,7 +262,7 @@ entries:
           y:
           - Temp
           - Sal
-      urlpath: https://researchworkspace.com/files/42202449/kacsewq_subsetted.csv
+      urlpath: simplecache://::https://researchworkspace.com/files/42202449/kacsewq_subsetted.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.readers:PandasCSV
     user_parameters: {}
